[package]
name = "dncli"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["stream", "json", "native-tls"] }
indicatif = "0.17" # Changed from "0.18.0" to "0.17"
url = "2.5.0"
futures-util = "0.3.30"
toml = "0.8.22"
dirs-next = "2.0.0"
confy = "1.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10.1"
